--- a/src/main/resources/templates/content/mypage/giveList.html
+++ b/src/main/resources/templates/content/mypage/giveList.html
@@ -53,6 +53,12 @@
                                     <!-- 첫 번째 이미지에만 액세스 -->
                                     <img class="card-img-top" th:src="${book.imagesList[0].imagesUrl}" th:alt="${book.title}" width="200" height="300">
                                 </div>
+<!--                                <div class="card mb-3">-->
+<!--                                    &lt;!&ndash; 첫 번째 이미지에만 액세스 &ndash;&gt;-->
+<!--                                    <a th:href="@{'/board/details/' + ${book.booksId}}">-->
+<!--                                        <img class="card-img-top" th:src="${book.imagesList[0].imagesUrl}" th:alt="${book.title}" width="200" height="300">-->
+<!--                                    </a>-->
+<!--                                </div>-->
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
