--- a/src/main/resources/templates/content/board/boardUpdateForm.html
+++ b/src/main/resources/templates/content/board/boardUpdateForm.html
@@ -8,7 +8,7 @@
         <head>
         <title>Add Board</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".static/css/App.css">
+    <link rel="stylesheet" href="/css/App.css">
     <style>
         form {
             margin-bottom: 70px; /* 폼 아래 여백 추가 */
