--- a/src/main/resources/templates/content/board/completeTakeBook.html
+++ b/src/main/resources/templates/content/board/completeTakeBook.html
@@ -3,6 +3,8 @@
 <head>
     <title>completeTakeBook</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/App.css">
+
     <style>
         .custom-button {
             background-color: #E2ECE2;
