--- a/src/main/resources/templates/content/admin/boardDetail.html
+++ b/src/main/resources/templates/content/admin/boardDetail.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>나눔글 관리</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/App.css">
+    <link rel="stylesheet" href="/css/App.css">
     <style>
         .carousel-item img {
             display: inline-block;
@@ -27,7 +27,7 @@
         <header th:replace="~{/sidebar/adminSidebar :: sidebarFragment}"></header>
 
         <!-- Main Content -->
-        <main role="main" class="col-md-9 col-lg-10 px-md-4" style="margin-left: 200px">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px;">
             <div class="container mt-5">
                 <div class="row">
                     <!-- Loop through the bookList to display each book -->
