--- a/src/main/resources/templates/content/admin/boardList.html
+++ b/src/main/resources/templates/content/admin/boardList.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>나눔글 관리</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/App.css">
+    <link rel="stylesheet" href="/css/App.css">
 </head>
+
 <body>
 <header th:replace="~{/header/header :: headerFragment}"></header>
 <div class="container-fluid">
@@ -15,9 +17,9 @@
         <header th:replace="~{/sidebar/adminSidebar :: sidebarFragment}"></header>
 
         <!-- Main Content -->
-        <main role="main" class="col-md-9 col-lg-10 px-md-4" style="margin-left: 200px">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px;">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">나눔글 관리</h1>
+                <h2>나눔글 관리</h2>
             </div>
             <!-- 검색창 -->
             <br>
@@ -60,7 +62,7 @@
                             <span th:each="book : ${board.booksList}" th:text="${book.transactions.status}"></span>
                         </td>
                         <td>
-                            <a th:href="@{/admin/board/detail/{boardId}(boardId=${board.boardId})}" class="btn btn-primary">자세히 보기</a>
+                            <a th:href="@{/admin/board/detail/{boardId}(boardId=${board.boardId})}" class="btn" style="background-color: #82BA82; color: #fff;">자세히 보기</a>
                         </td>
                     </tr>
                     </tbody>
