--- a/src/main/resources/templates/content/admin/checkList.html
+++ b/src/main/resources/templates/content/admin/checkList.html
@@ -3,7 +3,7 @@
 <head>
     <title>My Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".static/css/App.css">
+    <link rel="stylesheet" href="/css/App.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -41,7 +41,7 @@
         <header th:replace="~{/sidebar/adminSidebar :: sidebarFragment}"></header>
 
         <!-- Main -->
-        <main role="main" class="col-md-9 col-lg-10 px-md-4">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px;">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2" th:text="'도서 체크 리스트 (boardId = ' + ${boardId} + ')'"></h1>
             </div>
