--- a/src/main/resources/templates/content/board/takeBook.html
+++ b/src/main/resources/templates/content/board/takeBook.html
@@ -3,6 +3,8 @@
 <head>
     <title>takeBook</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/App.css">
+
     <style>
         hr {
             border: 2px solid #E2ECE2;
