--- a/src/main/resources/templates/content/board/updateBoardSearch.html
+++ b/src/main/resources/templates/content/board/updateBoardSearch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>book::search:result</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".static/css/App.css">
+    <link rel="stylesheet" href="/css/App.css">
 </head>
 <body>
 <!-- header -->
