--- a/src/main/resources/templates/content/mypage/takeList.html
+++ b/src/main/resources/templates/content/mypage/takeList.html
@@ -3,7 +3,7 @@
 <head>
     <title>My Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".static/css/App.css">
+    <link rel="stylesheet" href="/css/App.css">
     <style>
         hr {
             border: 2px solid #E2ECE2;
