--- a/src/main/resources/templates/content/user/boardAddForm.html
+++ b/src/main/resources/templates/content/user/boardAddForm.html
@@ -8,23 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/App.css">
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500&display=swap');
-        .donation {
-            font-family: 'Chakra Petch', sans-serif;
-        }
-
-        * {cursor: url('/images/cursor.cur') 1 1, auto;
-        }
-
-        .bold-label{
-            font-weight: bold;
-        }
-        .light-label {
-            font-weight: lighter;
-        }
-    </style>
 </head>
 
 
