--- a/src/main/resources/templates/content/user/bookSearch.html
+++ b/src/main/resources/templates/content/user/bookSearch.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>book::search:result</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/App.css">
+
 </head>
 <body>
 <!-- header -->
