--- a/src/main/resources/templates/sidebar/adminSidebar.html
+++ b/src/main/resources/templates/sidebar/adminSidebar.html
@@ -1,24 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/static/css/App.css">
-</head>
-
-<body>
-
-<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar" th:fragment="sidebarFragment" style="background-color: #E2ECE2; position: fixed; height: 100%; width: 150px;">
-    <div class="position-sticky">
+<nav id="sidebar" class="sidebar col-md-3 col-lg-2 bg-light d-md-block" th:fragment="sidebarFragment" style="width: 150px; font-family: 'Chakra Petch', sans-serif;">
+<div style="padding-top: 20px;">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="/admin/" style="color: black; font-weight: bold;">유저목록</a>
+                <a class="nav-link active" href="/admin/" style="color: black; font-weight: bold; font-size: 18px; text-decoration: none;" onmouseover="this.style.color='#82BA82'" onmouseout="this.style.color='black'">userlist</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/admin/board" style="color: black; font-weight: bold;">나눔글 관리</a>
+                <a class="nav-link active" href="/admin/board" style="color: black; font-weight: bold; font-size: 18px; text-decoration: none;" onmouseover="this.style.color='#82BA82'" onmouseout="this.style.color='black'">board manager</a>
             </li>
         </ul>
     </div>
 </nav>
 
-</body>
-</html>
