--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -6,7 +6,7 @@
                 <a class="nav-link active" href="/board/new" style="color: black; font-weight: bold; font-size: 18px; text-decoration: none;" onmouseover="this.style.color='#82BA82'" onmouseout="this.style.color='black'">book donation</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" style="color: black; font-weight: bold; font-size: 18px; text-decoration: none;" onmouseover="this.style.color='#82BA82'" onmouseout="this.style.color='black'">mypage</a>
+                <a class="nav-link" href="/user/mypage/myinfor" style="color: black; font-weight: bold; font-size: 18px; text-decoration: none;" onmouseover="this.style.color='#82BA82'" onmouseout="this.style.color='black'">mypage</a>
                 <!-- Wrap the sub-menu items in a container with an id -->
                 <div id="myPageSubMenu">
                     <ul class="nav flex-column ml-3">
