--- a/src/main/resources/templates/content/admin/main.html
+++ b/src/main/resources/templates/content/admin/main.html
@@ -16,12 +16,13 @@
 
         <!-- Main Content -->
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px;">
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h2>유저관리</h2 cla>
-            </div>
-            <br>
-            <div class="input-group">
-                <button type="button" class="btn btn-outline-primary rounded-pill" style="color: black; border-color: #E2ECE2; background-color: #E2ECE2;" onclick="searchUsers('enabled')">활성화 계정 보기</button>
+            <div class="main-container border rounded p-3 mt-2">
+                <h2 class="titles mb-3 mt-4 text-center">user list</h2>
+
+            <div class="border mt-2 mb-4"></div> <!--구분선 넣기 -->
+
+            <div class="input-group mb-2">
+                <button type="button" class="btn btn-outline-primary rounded-pill mr-2" style="color: black; border-color: #E2ECE2; background-color: #E2ECE2;" onclick="searchUsers('enabled')">활성화 계정 보기</button>
                 <button type="button" class="btn btn-outline-primary rounded-pill" style="color: black; border-color: #E2ECE2; background-color: #E2ECE2;" onclick="searchUsers('disabled')">비활성화 계정 보기</button>
             </div>
             <br>
