--- a/src/main/resources/templates/content/user/boardAddForm.html
+++ b/src/main/resources/templates/content/user/boardAddForm.html
@@ -23,9 +23,9 @@
 
         <!-- main 나눔글 작성하기-->
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px;">
-            <div class="main-container border rounded p-3 mt-2">
+            <div class="main-container border rounded p-3 mt-2"> <!-- 메인컨텐츠 주변 보더라인 잡기-->
 
-                <h2 class="donation mb-3 mt-4 text-center" style="color: #82BA82">DONATION</h2>
+                <h2 class="titles mb-3 mt-4 text-center">DONATION</h2>
                 <div class="border mt-2 mb-5"></div> <!--구분선 넣기 -->
                 <!-- 검색창 -->
                 <form action="/board/bookSearch" method="get" id="search">
