--- a/src/main/resources/templates/content/admin/userDetail.html
+++ b/src/main/resources/templates/content/admin/userDetail.html
@@ -32,11 +32,12 @@
         <header th:replace="~{/sidebar/adminSidebar :: sidebarFragment}"></header>
         <!-- Main -->
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px;">
-            <br>
-            <h2 class="text-center">유저 상세</h2>
+            <div class="main-container border rounded p-3 mt-2">
+            <h2 class="titles mb-3 mt-4 text-center">User Detail</h2>
             <hr>
+
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <div class="card mb-3">
                         <div class="card-body">
                             <h4 class="card-title">회원 정보</h4>
@@ -47,15 +48,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="text-right">
+                <div class="col-md-4 mb-3">
+                    <div class="text-left">
                         <button class="btn custom-button">회원 잠금</button>
                     </div>
                 </div>
             </div>
+
             <div class="card mb-3">
                 <div class="card-body">
-                    <h4 class="card-title">책 갈피 이용 내역</h4>
+                    <h4 class="card-title">책갈피 이용 내역</h4>
                     <div class="table-responsive">
                         <table class="table table-bordered">
                             <thead>
@@ -76,6 +78,7 @@
                         </table>
                     </div>
                 </div>
+            </div>
             </div>
         </main>
     </div>
