feat: takeList 페이징처리

--- a/src/main/resources/templates/content/admin/main.html
+++ b/src/main/resources/templates/content/admin/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>유저관리</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/App.css">
+    <link rel="stylesheet" href="/css/App.css">
 </head>
 <body>
 <header th:replace="~{/header/header :: headerFragment}"></header>
@@ -15,13 +15,14 @@
         <header th:replace="~{/sidebar/adminSidebar :: sidebarFragment}"></header>
 
         <!-- Main Content -->
-        <main role="main" class="col-md-9 col-lg-10 px-md-4" style="margin-left: 200px">
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">유저관리</h1>
-            </div>
-            <br>
-            <div class="input-group">
-                <button type="button" class="btn btn-outline-primary rounded-pill" style="color: black; border-color: #E2ECE2; background-color: #E2ECE2;" onclick="searchUsers('enabled')">활성화 계정 보기</button>
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px;">
+            <div class="main-container border rounded p-3 mt-2">
+                <h2 class="titles mb-3 mt-4 text-center">user list</h2>
+
+            <div class="border mt-2 mb-4"></div> <!--구분선 넣기 -->
+
+            <div class="input-group mb-2">
+                <button type="button" class="btn btn-outline-primary rounded-pill mr-2" style="color: black; border-color: #E2ECE2; background-color: #E2ECE2;" onclick="searchUsers('enabled')">활성화 계정 보기</button>
                 <button type="button" class="btn btn-outline-primary rounded-pill" style="color: black; border-color: #E2ECE2; background-color: #E2ECE2;" onclick="searchUsers('disabled')">비활성화 계정 보기</button>
             </div>
             <br>
@@ -46,7 +47,7 @@
                             <span th:text="${user.enabled} ? '활성화 계정' : '비활성화 계정'"></span>
                         </td>
                         <td>
-                            <a th:href="@{/admin/user/details/{userId}(userId=${user.usersId})}" class="btn btn-primary">자세히 보기</a>
+                            <a th:href="@{/admin/user/details/{userId}(userId=${user.usersId})}" class="btn" style="background-color: #82BA82; color: #fff;">자세히 보기</a>
                         </td>
                     </tr>
                     </tbody>
@@ -55,6 +56,7 @@
         </main>
     </div>
 </div>
+
 <footer th:replace="~{/footer/footer :: footerFragment}"></footer>
 
 <script>
