--- a/src/main/resources/templates/content/mypage/giveList.html
+++ b/src/main/resources/templates/content/mypage/giveList.html
@@ -3,7 +3,7 @@
 <head>
     <title>My Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".static/css/App.css">
+    <link rel="stylesheet" href="/css/App.css">
     <style>
         hr {
             border: 2px solid #E2ECE2;
@@ -42,7 +42,7 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px" >
             <br>
-            <h2 class="text-center">나눔한 책 현황</h2>
+            <h2 class="titles text-center">Give List</h2>
             <hr>
             <div class="row" th:each="board : ${boards}">
                 <div class="col-12">
