--- a/src/main/resources/templates/content/mypage/myInfor.html
+++ b/src/main/resources/templates/content/mypage/myInfor.html
@@ -3,6 +3,8 @@
 <head>
     <title>Detail</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/App.css">
+
     <style>
         hr {
             border: 2px solid #E2ECE2;
@@ -31,7 +33,7 @@
         <!-- Main -->
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px" >
             <br>
-            <h2 class="text-center">마이 페이지</h2>
+            <h2 class="titles text-center">My Info</h2>
             <hr>
             <div class="row">
                 <div class="col-md-6">
