--- a/src/main/resources/templates/content/mypage/takeList.html
+++ b/src/main/resources/templates/content/mypage/takeList.html
@@ -3,7 +3,7 @@
 <head>
     <title>My Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".static/css/App.css">
+    <link rel="stylesheet" href="/css/App.css">
     <style>
         hr {
             border: 2px solid #E2ECE2;
@@ -30,6 +30,25 @@
             margin: 5px;
         }
 
+        .pagination-container {
+            display: flex;
+            list-style: none;
+            padding: 0;
+            justify-content: center; /* 중앙 정렬 */
+        }
+
+        .pagination-container .page-item {
+            margin: 0 5px; /* 각 페이지 버튼 사이의 간격 조절 */
+        }
+
+        .pagination-container .page-link {
+            line-height: 30px; /* 버튼 내에서 텍스트 수직 중앙 정렬 */
+        }
+
+        .pagination-container .page-item.active .page-link {
+            background-color: #E2ECE2; /* 연두색 배경색 */
+            color: #000000; /* 글자색 (검정색 등) */
+        }
     </style>
 </head>
 <body>
@@ -39,11 +58,11 @@
         <!-- Sidebar -->
         <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px" >
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px">
             <br>
-            <h2 class="text-center">나눔 받은 책 현황</h2>
+            <h2 class="titles text-center">Take List</h2>
             <hr>
-            <div class="row" th:each="book : ${books}">
+            <div class="row" th:each="book : ${books.getContent()}">
                 <div class="col-12">
                     <div class="custom-text-box">
                         <div class="row">
@@ -64,8 +83,8 @@
                                             <p th:text="'책 등급: ' + ${book.grade}">책 등급: 등급</p>
                                         </div>
                                         <div class="col-md-4">
-                                            <div class="status-box">
-                                                <p th:text="'현재 상태: ' + ${book.transactions.getStatus()}">현재 상태: 상태</p>
+                                            <div style="background-color: #E2ECE2; border: 1px solid #E2ECE2; border-radius: 20px; color: black; font-size: 14px; padding: 5px 10px; pointer-events: none; display: inline-block;">
+                                                <span th:text="${book.transactions.status}"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -75,6 +94,27 @@
                     </div>
                 </div>
             </div>
+
+            <!-- 페이징 처리 -->
+            <nav aria-label="Page navigation" class="pagination-container">
+                <ul class="pagination">
+                    <!-- 이전 페이지로 가는 링크 -->
+                    <li th:if="${books.hasPrevious()}" class="page-item">
+                        <a class="page-link" th:href="@{'/user/mypage/takelist/?page=' + ${books.number - 1} + '&size=' + ${books.size} }">이전</a>
+                    </li>
+
+                    <!-- 페이지 번호들 -->
+                    <li th:each="i : ${#numbers.sequence(0, books.totalPages - 1)}" class="page-item" th:classappend="${i == books.number} ? 'active' : ''">
+                        <a class="page-link" th:href="@{'/user/mypage/takelist/?page=' + ${i} + '&size=' + ${books.size} }" th:text="${i + 1}"></a>
+                    </li>
+
+                    <!-- 다음 페이지로 가는 링크 -->
+                    <li th:if="${books.hasNext()}" class="page-item">
+                        <a class="page-link" th:href="@{'/user/mypage/takelist/?page=' + ${books.number + 1} + '&size=' + ${books.size} }">다음</a>
+                    </li>
+                </ul>
+            </nav>
+
         </main>
     </div>
 </div>
