--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,58 +1,87 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>로그인</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>로그인</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 </head>
 
 <body class="gradient-custom" style="background-color: #E2ECE2;">
-<section class="d-flex vh-100">
-  <div class="container-fluid row justify-content-center align-content-center">
-    <div class="card" style="border-radius: 1rem; background-color: white;">
-      <div class="card-body p-3 text-center">
-        <h2 class="mt-3">LOGIN</h2>
-        <p class="mt-2 mb-2">서비스를 사용하려면 로그인을 해주세요</p>
-        <hr>
-        <div class = "mb-2">
-          <form action="/user/login" method="POST">
-            <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
-            <div class="form-group row">
-              <label class="col-sm-4 col-form-label text-left ">Email :</label>
-              <div class="col-sm-8">
-                <input type="email" class="form-control" name="username">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 col-form-label text-left ">Password :</label>
-              <div class="col-sm-8">
-                <input type="password" class="form-control" name="password">
-              </div>
-            </div>
-            <button type="submit" class="btn btn-dark">로그인</button>
-          </form>
 
-          <hr>
+<header class="sticky-top" th:replace="~{/header/header :: headerFragment}"></header>
+<hr>
 
-          <div class="d-flex justify-content-between mt-3">
-            <a href="/user/signup" style="text-decoration: underline; color: black;">회원가입</a>
-            <a href="/oauth2/authorization/kakao" className="text-warning mt-3 d-block" style="text-decoration: underline; color: #ffc107;">
-             카카오 로그인 <img th:src="@{/images/kakao.png}" alt="Kakao Logo" style="height: 24px; margin-right: 8px;"></a>
-          </div>
-          <div class="d-flex mt-3">
-            <a href="/user/find/idPw" style="text-decoration: underline; color: black;">아이디/패스워드찾기</a>
-          </div>
-        </div>
-      </div>
+<div class="container-fluid">
+    <div class="row">
+        <main role="main" class="col-md-12">
+            <section class="d-flex vh-100">
+              <div class="container-fluid row justify-content-center align-content-center" style="position: relative; top: -90px;">
+                  <div class="card" style="border-radius: 1rem; background-color: white; width: 30%;">
+                        <div class="card-body p-3 text-center">
+                            <h2 class="mt-3">LOGIN</h2>
+                            <p class="mt-2 mb-2">서비스를 사용하려면 로그인을 해주세요</p>
+                            <hr>
+                            <div class="mb-2">
+                                <form action="/user/login" method="POST">
+                                    <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}"/>
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label text-left ">Email :</label>
+                                        <div class="col-sm-8">
+                                            <input type="email" class="form-control" name="username">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label text-left ">Password :</label>
+                                        <div class="col-sm-8">
+                                            <input type="password" class="form-control" name="password">
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-dark">로그인</button>
+                                </form>
+
+                                <hr>
+
+                                <div class="d-flex justify-content-between mt-3">
+                                    <a href="/user/signup" style="text-decoration: underline; color: black;">회원가입</a>
+                                    <a href="/oauth2/authorization/kakao" className="text-warning mt-3 d-block"
+                                       style="text-decoration: underline; color: #ffc107;">
+                                        카카오 로그인 <img th:src="@{/images/kakao.png}" alt="Kakao Logo"
+                                                     style="height: 24px; margin-right: 8px;"></a>
+                                </div>
+                                <div class="d-flex mt-3">
+                                    <a href="/user/find/idPw" style="text-decoration: underline; color: black;">아이디/패스워드찾기</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
-  </div>
-</section>
+</div>
+
+<footer th:replace="~{/footer/footer :: footerFragment}"></footer>
 <!-- Thymeleaf를 사용하는 경우 아래와 같이 에러 메시지를 표시 -->
-<script th:if="${error}" th:inline="javascript">
-  /*<![CDATA[*/
-  alert([[${error}]]);
-  /*]]>*/
-</script>
 </body>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var serverErrorMessage = [[${error}]];
+    if (serverErrorMessage) {
+        alert(serverErrorMessage);
+    }
+    /*]]>*/
+</script>
+
+<script>
+    window.onload = function () {
+        const urlParams = new URLSearchParams(window.location.search);
+        const errorMessage = urlParams.get('error');
+        console.log(errorMessage)
+        if (errorMessage) {
+            alert(errorMessage);
+        }
+    };
+</script>
 
 </html>
