feat : 비밀번호 찾기,이메일 찾기 기능 완료

--- a/src/main/resources/templates/findIdPw.html
+++ b/src/main/resources/templates/findIdPw.html
@@ -122,7 +122,7 @@
             })
             .catch(function(error) {
                 // 오류 처리
-                console.error('오류 발생', error);
+                document.getElementById('response').innerHTML = '<span style="color: red;">' + error.response.data + '</span>';
             });
     });
 
