--- a/src/main/resources/templates/changePw.html
+++ b/src/main/resources/templates/changePw.html
@@ -19,9 +19,10 @@
                     <div class="card" style="border-radius: 1rem; background-color: white; width: 25%;">
                         <div class="card-body p-3 text-center">
                             <h2 class="mt-3 mb-3">Change Password</h2>
-                            <form th:action="@{/reset-password}" method="POST">
-                                <!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
-                                <!--        <input type="hidden" th:value="${token}" name="token"/> &lt;!&ndash; 비밀번호 재설정 토큰 &ndash;&gt;-->
+                            <div id="responseError" th:if="${error}" th:text="${error}" style="color: red;"></div>
+                            <form th:action="@{/user/reset-password}" method="POST">
+<!--                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+                                <input type="hidden" th:value="${token}" name="token"/> <!-- 비밀번호 재설정 토큰 -->
                                 <div class="form-group row">
                                     <label class="col-sm-4 col-form-label text-left ">새 비밀번호:</label>
                                     <div class="col-sm-8">
